# LIBSOFFF

./: .gitattributes  .gitignore  INJECTION_GUIDE.md  README.md  a2.txt  bgmi_hack.lua  prompt.txt  sock64
build_so/: ARCHITECTURE.md  Bypass.h  CMakeLists.txt  SDK.hpp  build.sh  game_sdk.h  main.cpp  sdk_functions.cpp  sdk_wrappers.cpp
build_so/Main/: InlineHook.h  MemoryTools.h  Tools.h
build_so/Offset/: SDK.hpp
build_so/SDK/: NIKON_ACLPlugin_classes.hpp  NIKON_ACLPlugin_parameters.hpp  NIKON_AIGCKit_parameters.hpp  NIKON_AIModule_classes.hpp  NIKON_AIModule_structs.hpp  NIKON_AI_parameters.hpp  NIKON_AI_structs.hpp  NIKON_AWSHelper_parameters.hpp  NIKON_ActorSequence_structs.hpp  NIKON_Addons_functions.cpp  NIKON_AkAudio_classes.hpp  NIKON_AkAudio_functions.cpp  NIKON_AkAudio_parameters.hpp  NIKON_AkAudio_structs.hpp  NIKON_AndroidDeviceProfileSelector_functions.cpp  NIKON_AndroidPermission_classes.hpp  NIKON_AndroidPermission_functions.cpp  NIKON_AndroidPermission_parameters.hpp  NIKON_AndroidRuntimeSettings_classes.hpp  NIKON_AndroidRuntimeSettings_structs.hpp  NIKON_AnimGraphRuntime_parameters.hpp  NIKON_AnimationCore_structs.hpp  NIKON_AssetRegistry_classes.hpp  NIKON_AssetRegistry_structs.hpp  NIKON_AudioMixer_classes.hpp  NIKON_AutoRobot_functions.cpp  NIKON_Basic_classes.hpp  NIKON_Basic_parameters.hpp  NIKON_Basic_structs.hpp  NIKON_BlockyLuaCore_functions.cpp  NIKON_BlockyLua_classes.hpp  NIKON_BlockyLua_functions.cpp  NIKON_BuildSystem_classes.hpp  NIKON_BuildSystem_structs.hpp  NIKON_CinematicCamera_functions.cpp  NIKON_ClothingSystemRuntimeInterface_structs.hpp  NIKON_ClothingSystemRuntime_classes.hpp  NIKON_CommonLib_functions.cpp  NIKON_CommonLib_structs.hpp  NIKON_CommonUIWidget_classes.hpp  (+130 more)
build_so/android/: log.h
build_so/jni/: Android.mk  Application.mk  Bypass.h  (+9 more)
(+478 files in other folders)
